can now display the treemap. Had to report many bugs to the ocsigen team
to get this to work.

** sgrep: support for regexp when matching string constants

* 0.16 (Q2 2011) (c++ parser refactoring)

** better C++ parser
complete refactoring of the parser. Far less heuristics techniques.
Closer to what was described in the CC'09 paper.

* 0.15 (Q1 2011) (html/css parsers, ocsigen try)
extra: mmm and meh (and zamcov part1)

** introduce web-based source code navigator a la LXR using ocsigen
first play with ocsigen.

update: not used

** introduce lang_html/ with clean ast_html.ml type
(also using code from a stripped down version of ocamlnet)

** introduce lang_css/
(using code from ccss by dario teixeira)

** introduce lang_web/ with combined html+js+css parser

* -----------------------------------------------------------

* 0.14 (Q4 2010) (layers, spatch php, more language highlighters)
extra: c-- (and first use of ocamldoc -dotall to visualize soft archi)

** codemap

*** layer type, so can save results of global analysis and process them
later in codemap or pfff_statistics

*** layers! like in google earth

- architecture/aspect layer (default one)
- static dead code layer
- dead: dynamic live code layer (using xhprof data)
- test coverage layer (using phpunit and xdebug data)
- 
- bugs layer
- security layer
- cyclomatic complexity, 
- age (and activity) layer
- number of authors layer

*** more semantic visual feedback
can see arguments passed by refs visually (TakeArgNByRef)
as well as functions containing dynamic calls (ContainDynamicCall)

*** visual grep
can now visualize the result of a git grep on a project

*** better visualization of directories
use different color for dirs and files labels, and highlight first
letter of label at depth = 1


** introduce spatch, a syntactical patch
a DSL to express easily refactoring on PHP.

** sgrep/spatch

*** better support for XHP patterns with flexible matching
on attributes
