@@ -161,5 +161,5 @@ call_edge(I, F) :-
 % Postlude
 %*******************************************************************************
   
-%point_to(A,B)?
-call_edge(A,B)?
+point_to(A,B)?
+%call_edge(A,B)?
